Fixing layout and spacing issues

--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -38,7 +38,7 @@ p {
 
 .logo img {
     width:100%;
-    padding:10px 0px 0px 40px;
+   
   
 }
 
@@ -78,7 +78,7 @@ p {
 }
 .arrow {
     z-index: 2;
-    padding-top: 150px;
+    padding-top: 60px;
     padding-left:120px;
     position: absolute;
 }
@@ -100,10 +100,7 @@ p {
 }
 
 .skillsRight {
-    width:40%;
-    padding:50px;
-    margin-right:60px;
-    margin-left:50px;
+    
     background-color: #F3EAE3;
 }
 
